Radio support improvement
Up to 15 radio controls per course. Easyer radio transmitter
installation.
Better support of 1,2,3 and 4 panels modes
Version planned to be used for PACA night orienteering

--- a/styles/screen.css
+++ b/styles/screen.css
@@ -13,13 +13,7 @@ td.screen_subtitlecolor{
 td.screen_screenmode{
     text-align:center; vertical-align:middle;
 }
-td.screen_fullcontent{
-    text-align:center; vertical-align:middle;
-}
-td.screen_leftcontent{
-    text-align:center; vertical-align:middle;
-}
-td.screen_rightcontent{
+td.screen_content{
     text-align:center; vertical-align:middle;
 }
 
